# p2p_data_mesh

./: pubspec.yaml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  emergency_protocol.cpp  emergency_protocol.h
android/app/src/main/kotlin/com/emergency/p2p_emergency_mesh/: BleAdvertiserService.kt  MainActivity.kt
ios/: emergency_protocol.mm
ios/.dart_tool/: package_config.json  package_config_subset
ios/Runner/: Info.plist  emergency_protocol.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: emergency_protocol.dart  platform_ble.dart
